--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
 <body>
     <button class="new-book-btn" type="button">Add New Book</button>
     <dialog id="dialog">
-        <form action="dialog">
+        <form method="" action="">
             <p>
                 <label for="title">Title</label>
-                <input type="text" id="title">
+                <input type="text" name="title" id="title" required>
             </p>
             <p>
                 <label for="author">Author</label>
-                <input type="text" id="author">
+                <input type="text" name="author" id="author" required>
             </p>
             <p>
                 <label for="pages">Pages</label>
-                <input type="number" id="pages" min=0>
+                <input type="number" name="pages" id="pages" min=0 required>
             </p>
             <p>
                 <label for="read">Read</label>
-                <input type="checkbox" id="read">
+                <input type="checkbox" name="read" id="read" required>
             </p>
             <div>
-                <button value="cancel" formmethod="dialog">Cancel</button>
-                <button id="confirmBtn" formmethod="dialog">Confirm</button>
+                <button id="cancel-btn">Cancel</button>
+                <button id="add-book-btn">Add Book</button>
             </div>
         </form>
     </dialog>
