--- a/index.html
+++ b/index.html
@@ -14,24 +14,25 @@
     <dialog id="dialog">
         <form method="" action="">
             <p>
-                <label for="title">Title</label>
+                <label for="title">Title*</label>
                 <input type="text" name="title" id="title" required>
             </p>
             <p>
-                <label for="author">Author</label>
+                <label for="author">Author*</label>
                 <input type="text" name="author" id="author" required>
             </p>
             <p>
-                <label for="pages">Pages</label>
+                <label for="pages">Pages*</label>
                 <input type="number" name="pages" id="pages" min=0 required>
             </p>
             <p>
                 <label for="read">Read</label>
-                <input type="checkbox" name="read" id="read" required>
+                <input type="checkbox" name="read" id="read">
             </p>
+            <small class="error-message-form"></small>
             <div>
-                <button id="cancel-btn">Cancel</button>
-                <button id="add-book-btn">Add Book</button>
+                <button type="button" id="cancel-btn">Cancel</button>
+                <button type="submit" id="add-book-btn">Add Book</button>
             </div>
         </form>
     </dialog>
